# routingpy

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.rst  pyproject.toml
.github/workflows/: ci-tests.yml
docs/: index.rst
routingpy/: __init__.py  client_base.py  direction.py  optimized.py  valhalla_attributes.py
routingpy/routers/: __init__.py  google.py  graphhopper.py  ign.py  mapbox_osrm.py  openrouteservice.py  valhalla.py
tests/: test_direction.py  test_ign.py  test_openrouteservice.py  test_valhalla.py
tests/data/: mock.py
