[project]
name = "routingpy"
version = "1.3.0"
description = "One lib to route them all."
readme = "README.rst"
license = { text = "Apache-2.0" }
maintainers = [
    { name = "Matthieu Viry", email = "matthieu.viry@cnrs.fr" },
]
authors = [
    { name = "Nils Nolde", email = "nils@gis-ops.com" },
    { name = "Tim Ellersiek", email = "tim@gis-ops.com" },
    { name = "Christian Beiwinkel", email = "christian@gis-ops.com" },
]
keywords = [
    "routing",
    "routing-engine",
    "routing-service",
    "openrouteservice",
    "ors",
    "graphhopper",
    "osrm",
    "valhalla",
    "mapbox",
    "google-maps",
    "google-maps-api",
    "google-maps-directions-api",
    "here-routing-api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["dependencies", "requires-python"]

[project.urls]
homepage = "https://github.com/mthh/routingpy"
repository = "https://github.com/mthh/routingpy"
documentation = "https://routingpy.readthedocs.io/"
"Bug Tracker" = "https://github.com/mthh/routingpy/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    "AUTHORS.md",
    "LICENSE",
    "README.rst",
]
exclude = [
    "tests/*",
    "**/__pycache__",
    "**/*.py[co]",
    "**/.DS_Store",
]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.20.0"
# For the Jupyter notebooks:
shapely = { version = "^2.0.0", optional = true }
ipykernel = { version = "^6.0.0", optional = true }
matplotlib = { version = "^3.4.1", optional = true }
contextily = { version = "^1.1.0", optional = true }
geopandas = { version = ">=0.14.0,<1.0.0 || >=1.0.0", optional = true }
descartes = { version = "^1.0.0", optional = true }

[tool.poetry.extras]
notebooks = [
    "shapely",
    "ipykernel",
    "geopandas",
    "contextily",
    "matplotlib",
    "descartes",
]

[tool.poetry.group.dev.dependencies]
sphinx = ">=5.0"
sphinx-rtd-theme = "^1.0.0"
sphinxnotes-strike = "^1.2"
responses = "^0.10.0"
coverage = "^7.0.0"
pre-commit = "^2.7.1"
pytest = "^8.0.0"

[tool.black]
line-length = 105
exclude = '''
/(
    \.git
  | \.venv
  | dist
  | build
)/
'''

[tool.isort]
profile = "black"
line_length = 105
src_paths = ["routingpy", "tests"]
skip = [".venv", "build", "dist"]

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = ["E203", "E266", "E501", "F403", "E722", "F405"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
    "docs",
    "examples",
]
per-file-ignores = {}

line-length = 105

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
